--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -636,6 +636,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filling NaN values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -647,6 +654,13 @@
     "    df.loc[i, 'rata_rata_jumlah_transaksi']=1.00\n",
     "    for j in ['rata_rata_nilai_transaksi', 'maksimum_nilai_transaksi', 'minimum_nilai_transaksi']:\n",
     "        df.loc[i, j]=df.loc[i,'nilai_transaksi']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fraud cases from each city"
    ]
   },
   {
@@ -816,6 +830,13 @@
    "outputs": [],
    "source": [
     "df['selisih_transaksi_rata_rata']=df.apply(lambda x: x['nilai_transaksi']-x['rata_rata_nilai_transaksi'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature Importance based on chi2"
    ]
   },
   {
